<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".AmountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/app_name"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/roboto"
            android:text="@string/tv_cantidades"
            android:textAlignment="textStart"
            android:textColor="@color/textColorTitles"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_500"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/roboto_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_500"
            android:padding="15dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1000"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/roboto_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_1000"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_5000"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/roboto_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_5000"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_10000"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/roboto_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_10000"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/roboto"
            android:text="@string/tv_otra_cantidad"
            android:layout_marginStart="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorTitles"
            android:textSize="17sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/card_color"
            android:elevation="25dp"
            app:cardCornerRadius="5dp">

            <EditText
                android:id="@+id/tf_otraCantidad"
                android:fontFamily="@font/roboto_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:hint="@string/et_cantidad_inicial"
                android:textColorLink="@color/white"
                android:textColorHighlight="@color/textColor"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/card_color"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_procesar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/starColorButton"
            android:fontFamily="@font/roboto_medium"
            android:padding="17.5dp"
            android:text="@string/btn_procesar"
            android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="17sp"/>

    </LinearLayout>

</ScrollView>