<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".PayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/roboto"
            android:text="@string/tv_cantidad"
            android:textAlignment="textStart"
            android:textColor="@color/textColorTitles"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/roboto_medium"/>

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_initial_amount"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:fontFamily="@font/roboto_medium">
            </TextView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/roboto"
            android:text="@string/tv_datos"
            android:textAlignment="textStart"
            android:textColor="@color/textColorTitles"
            android:textSize="17sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:backgroundTint="@color/card_color"
            app:cardElevation="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.stripe.android.view.CardInputWidget
                    android:id="@+id/cardInputWidget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="30dp"
                    android:theme="@style/CardWidgetStyle"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/payButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/starColorButton"
            android:elevation="5dp"
            android:fontFamily="@font/roboto_medium"
            android:padding="17.5dp"
            android:text="@string/btn_transaccion"
            android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="17sp"/>

    </LinearLayout>


</ScrollView>